Fixing large tests